language/move-lang/tests/move_check/unit_test/expected_failure_not_test.unit_test.exp
error: 

   ┌── tests/move_check/unit_test/expected_failure_not_test.move:7:9 ───
   │
 7 │     fun foo() { }
   │         ^^^ Only functions defined as a test with #[test] can also have an #[expected_failure] attribute
   ·
 6 │     #[expected_failure]
   │       ---------------- Attributed as #[expected_failure] here
   │

error: 

    ┌── tests/move_check/unit_test/expected_failure_not_test.move:10:9 ───
    │
 10 │     fun bar() { }
    │         ^^^ Only functions defined as a test with #[test] can also have an #[expected_failure] attribute
    ·
  9 │     #[test_only, expected_failure]
    │                  ---------------- Attributed as #[expected_failure] here
    │

